# LocalPilot

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: TerminalPanel.tsx
src/components/chat/: ActionCard.tsx
src/features/chat/: ChatPage.tsx
src/features/command-palette/: CommandPalette.tsx
src/features/documents/: DocumentsPage.tsx
src/features/home/: HomePage.tsx
src/features/overlay/: OverlayPanel.tsx
src/features/projects/: ProjectsPage.tsx
src/features/prompts/: PromptsPage.tsx
src/features/settings/: SettingsPage.tsx
src/features/tools/: ToolDialog.tsx  ToolsPage.tsx  tools-config.ts
src/features/welcome/: WelcomePage.tsx
src/i18n/: en.ts  index.tsx  sv.ts
src/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: vector-math.ts
src/services/: fs-service.ts  ollama.ts  pdf-service.ts  rag-service.ts  storage.ts  vision-service.ts  workspace.ts
src/store/: chat-store.ts  document-store.ts  index.ts  ollama-store.ts  project-store.ts  prompt-store.ts  settings-store.ts  terminal-store.ts  tool-store.ts
src/types/: index.ts
